--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "scripts": "^0.1.0",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
